fix truncate long experiment names

--- a/frontend/stylesheets/typography.css.scss
+++ b/frontend/stylesheets/typography.css.scss
@@ -9,6 +9,9 @@
 .text-red {
   color: red;
 }
+.text-black {
+  color: $gray;
+}
 
 .semi-bold {
   font-weight: 600;
